# chope

./: LICENSE  README.md  pyproject.toml
.github/workflows/: run_tests.yml
chope/: __init__.py  css.py  element.py  tag.py  variable.py
chope/functions/: color.py  function.py  shape.py  transform.py
tests/: test_css.py  test_element.py  test_function.py  test_tag.py
